--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/react-router": "^5.1.15",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "typescript": "^4.3.2",
     "vite": "^2.3.8"
