--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/react-router": "^5.1.15",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
