--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0",
-    "react-geolocated": "^3.2.0"
+    "react-geolocated": "^3.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
