--- a/package.json
+++ b/package.json
@@ -11,16 +11,13 @@
     "@types/react-router": "^5.1.15",
     "emailjs": "^3.5.0",
     "emailjs-com": "^3.1.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-router-dom": "^5.2.0",
-    "yarn": "^1.22.10",
     "lodash.debounce": "^4.0.8",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-loading-bar": "0.0.7",
+    "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
-    "react-router-dom": "^5.2.0"
+    "react-loading-bar": "0.0.7",
+    "react-router-dom": "^5.2.0",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.170",
