--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.2",
     "react-geolocated": "^3.2.0",
+    "react-loading": "^2.0.3",
     "react-loading-bar": "0.0.7",
+    "react-number-format": "^4.6.4",
     "react-router-dom": "^5.2.0",
+    "react-spinner-timer": "^1.0.5",
+    "react-spinners": "^0.11.0",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
