--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@types/react-router": "^5.1.15",
     "emailjs": "^3.5.0",
     "emailjs-com": "^3.1.0",
